cabal-version:      2.4
name:               large-records-benchmarks
version:            0.1.0.0
synopsis:           Benchmarks for the large-records library.
description:        Detailed benchmarks of the compile-time performance of the
                    large-records library, as well as various experiments
                    testing individual aspects of the approach. See the report
                    for detailed information.
bug-reports:        https://github.com/well-typed/large-records/issues
license:            BSD-3-Clause
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
category:           Generics
tested-with:        GHC ==8.8.4

source-repository head
  type:     git
  location: https://github.com/well-typed/large-records

common defaults
  default-language:
      Haskell2010
  build-depends:
      base >= 4.13 && < 4.17
  ghc-options:
      -Wall

      -- The primary goal of this work is to improve the development cycle, so
      -- we compile with -O0 for the benchmarks.
      -O0

--
-- LIBRARY
--
-- The library contains support code that is used by all benchmarks. It is not
-- intended for use outside of this package.
--

library
  import:
      defaults
  exposed-modules:
      Bench.Types
      Bench.HList
  hs-source-dirs:
      lib
  build-depends:
    , aeson
    , large-generics
    , sop-core

--
-- TOOLING
--

common tooling
  hs-source-dirs:
      tooling
  build-depends:
      bytestring
    , cassava
    , conduit
    , containers
    , optparse-applicative
    , pcre-light
    , unordered-containers
    , utf8-string
    , vector
  other-modules:
      Tooling

executable parse-coresize
  import:
      defaults
    , tooling
  main-is:
      ParseCoresize.hs

executable parse-timing
  import:
      defaults
    , tooling
  main-is:
      ParseTiming.hs

--
-- BENCHMARKS
--

common benchmark
  default-extensions:
      CPP
  build-depends:
      large-records-benchmarks
  if flag(profile-coresize)
      cpp-options: -DPROFILE_CORESIZE
  if flag(profile-timing)
      cpp-options: -DPROFILE_TIMING

-- The " before " benchmark is independent of the large-records library:
-- it tests the situation /before/ the introduction of the library.
executable bench-before
  import:
      defaults
    , benchmark
  main-is:
      Main.hs
  hs-source-dirs:
      bench/before
  build-depends:
    , aeson
    , generics-sop
    , json-sop
    , record-dot-preprocessor
    , record-hasfield
  other-modules:
      Before.Sized.R000
      Before.Sized.R010
      Before.Sized.R020
      Before.Sized.R030
      Before.Sized.R040
      Before.Sized.R050
      Before.Sized.R060
      Before.Sized.R070
      Before.Sized.R080
      Before.Sized.R090
      Before.Sized.R100

executable bench-after
  import:
      defaults
    , benchmark
  main-is:
      Main.hs
  hs-source-dirs:
      bench/after
  ghc-options:
      -- Needed for the HasNormalForm benchmark
      -freduction-depth=2000
  build-depends:
      aeson
    , large-generics
    , large-records
  other-modules:
      After.Sized.R000
      After.Sized.R010
      After.Sized.R020
      After.Sized.R030
      After.Sized.R040
      After.Sized.R050
      After.Sized.R060
      After.Sized.R070
      After.Sized.R080
      After.Sized.R090
      After.Sized.R100

      HigherKinded.Sized.R000
      HigherKinded.Sized.R010
      HigherKinded.Sized.R020
      HigherKinded.Sized.R030
      HigherKinded.Sized.R040
      HigherKinded.Sized.R050
      HigherKinded.Sized.R060
      HigherKinded.Sized.R070
      HigherKinded.Sized.R080
      HigherKinded.Sized.R090
      HigherKinded.Sized.R100

      HasNormalForm.Sized.R000
      HasNormalForm.Sized.R010
      HasNormalForm.Sized.R020
      HasNormalForm.Sized.R030
      HasNormalForm.Sized.R040
      HasNormalForm.Sized.R050
      HasNormalForm.Sized.R060
      HasNormalForm.Sized.R070
      HasNormalForm.Sized.R080
      HasNormalForm.Sized.R090
      HasNormalForm.Sized.R100

-- The " experiments " benchmark is independent of the large-records library,
-- and tests various approaches in isolation.
-- (The "Generics" experiment depends on `large-generics`, but not on the
-- `large-records` library itself.)
executable bench-experiments
  import:
      defaults
    , benchmark
  main-is:
      Main.hs
  hs-source-dirs:
      bench/experiments
  build-depends:
    , aeson
    , generics-sop
    , json-sop
    , large-generics
    , sop-core
  other-modules:
      Infra.ShowType
      Infra.Tree

      Common.EmptyClass_List
      Common.EmptyClass_Tree_Nominal
      Common.EmptyClass_Tree_Phantom

      Common.HListOfSize.HL010
      Common.HListOfSize.HL020
      Common.HListOfSize.HL030
      Common.HListOfSize.HL040
      Common.HListOfSize.HL050
      Common.HListOfSize.HL060
      Common.HListOfSize.HL070
      Common.HListOfSize.HL080
      Common.HListOfSize.HL090
      Common.HListOfSize.HL100

      Experiment.SimpleRecord.Sized.R000
      Experiment.SimpleRecord.Sized.R010
      Experiment.SimpleRecord.Sized.R020
      Experiment.SimpleRecord.Sized.R030
      Experiment.SimpleRecord.Sized.R040
      Experiment.SimpleRecord.Sized.R050
      Experiment.SimpleRecord.Sized.R060
      Experiment.SimpleRecord.Sized.R070
      Experiment.SimpleRecord.Sized.R080
      Experiment.SimpleRecord.Sized.R090
      Experiment.SimpleRecord.Sized.R100

      Experiment.PatternSynonym_Default.Sized.R000
      Experiment.PatternSynonym_Default.Sized.R010
      Experiment.PatternSynonym_Default.Sized.R020
      Experiment.PatternSynonym_Default.Sized.R030
      Experiment.PatternSynonym_Default.Sized.R040
      Experiment.PatternSynonym_Default.Sized.R050
      Experiment.PatternSynonym_Default.Sized.R060
      Experiment.PatternSynonym_Default.Sized.R070
      Experiment.PatternSynonym_Default.Sized.R080
      Experiment.PatternSynonym_Default.Sized.R090
      Experiment.PatternSynonym_Default.Sized.R100

      Experiment.PatternSynonym_NFS.Sized.R000
      Experiment.PatternSynonym_NFS.Sized.R010
      Experiment.PatternSynonym_NFS.Sized.R020
      Experiment.PatternSynonym_NFS.Sized.R030
      Experiment.PatternSynonym_NFS.Sized.R040
      Experiment.PatternSynonym_NFS.Sized.R050
      Experiment.PatternSynonym_NFS.Sized.R060
      Experiment.PatternSynonym_NFS.Sized.R070
      Experiment.PatternSynonym_NFS.Sized.R080
      Experiment.PatternSynonym_NFS.Sized.R090
      Experiment.PatternSynonym_NFS.Sized.R100

      Experiment.Superclasses.Sized.R000
      Experiment.Superclasses.Sized.R010
      Experiment.Superclasses.Sized.R020
      Experiment.Superclasses.Sized.R030
      Experiment.Superclasses.Sized.R040
      Experiment.Superclasses.Sized.R050
      Experiment.Superclasses.Sized.R060
      Experiment.Superclasses.Sized.R070
      Experiment.Superclasses.Sized.R080
      Experiment.Superclasses.Sized.R090
      Experiment.Superclasses.Sized.R100

      Experiment.Applicative.Sized.R000
      Experiment.Applicative.Sized.R010
      Experiment.Applicative.Sized.R020
      Experiment.Applicative.Sized.R030
      Experiment.Applicative.Sized.R040
      Experiment.Applicative.Sized.R050
      Experiment.Applicative.Sized.R060
      Experiment.Applicative.Sized.R070
      Experiment.Applicative.Sized.R080
      Experiment.Applicative.Sized.R090
      Experiment.Applicative.Sized.R100

      Experiment.Induction_List.Sized.R000
      Experiment.Induction_List.Sized.R010
      Experiment.Induction_List.Sized.R020
      Experiment.Induction_List.Sized.R030
      Experiment.Induction_List.Sized.R040
      Experiment.Induction_List.Sized.R050
      Experiment.Induction_List.Sized.R060
      Experiment.Induction_List.Sized.R070
      Experiment.Induction_List.Sized.R080
      Experiment.Induction_List.Sized.R090
      Experiment.Induction_List.Sized.R100

      Experiment.Induction_Tree_Nominal.Sized.R000
      Experiment.Induction_Tree_Nominal.Sized.R010
      Experiment.Induction_Tree_Nominal.Sized.R020
      Experiment.Induction_Tree_Nominal.Sized.R030
      Experiment.Induction_Tree_Nominal.Sized.R040
      Experiment.Induction_Tree_Nominal.Sized.R050
      Experiment.Induction_Tree_Nominal.Sized.R060
      Experiment.Induction_Tree_Nominal.Sized.R070
      Experiment.Induction_Tree_Nominal.Sized.R080
      Experiment.Induction_Tree_Nominal.Sized.R090
      Experiment.Induction_Tree_Nominal.Sized.R100

      Experiment.Induction_Tree_Phantom.Sized.R000
      Experiment.Induction_Tree_Phantom.Sized.R010
      Experiment.Induction_Tree_Phantom.Sized.R020
      Experiment.Induction_Tree_Phantom.Sized.R030
      Experiment.Induction_Tree_Phantom.Sized.R040
      Experiment.Induction_Tree_Phantom.Sized.R050
      Experiment.Induction_Tree_Phantom.Sized.R060
      Experiment.Induction_Tree_Phantom.Sized.R070
      Experiment.Induction_Tree_Phantom.Sized.R080
      Experiment.Induction_Tree_Phantom.Sized.R090
      Experiment.Induction_Tree_Phantom.Sized.R100

      Experiment.ConstraintFamily_Deep
      Experiment.ConstraintFamily_Deep.Sized.R000
      Experiment.ConstraintFamily_Deep.Sized.R010
      Experiment.ConstraintFamily_Deep.Sized.R020
      Experiment.ConstraintFamily_Deep.Sized.R030
      Experiment.ConstraintFamily_Deep.Sized.R040
      Experiment.ConstraintFamily_Deep.Sized.R050
      Experiment.ConstraintFamily_Deep.Sized.R060
      Experiment.ConstraintFamily_Deep.Sized.R070
      Experiment.ConstraintFamily_Deep.Sized.R080
      Experiment.ConstraintFamily_Deep.Sized.R090
      Experiment.ConstraintFamily_Deep.Sized.R100

      Experiment.ConstraintFamily_Shallow
      Experiment.ConstraintFamily_Shallow.Sized.R000
      Experiment.ConstraintFamily_Shallow.Sized.R010
      Experiment.ConstraintFamily_Shallow.Sized.R020
      Experiment.ConstraintFamily_Shallow.Sized.R030
      Experiment.ConstraintFamily_Shallow.Sized.R040
      Experiment.ConstraintFamily_Shallow.Sized.R050
      Experiment.ConstraintFamily_Shallow.Sized.R060
      Experiment.ConstraintFamily_Shallow.Sized.R070
      Experiment.ConstraintFamily_Shallow.Sized.R080
      Experiment.ConstraintFamily_Shallow.Sized.R090
      Experiment.ConstraintFamily_Shallow.Sized.R100

      Experiment.Generics_SOP
      Experiment.Generics_SOP.Sized.R000
      Experiment.Generics_SOP.Sized.R010
      Experiment.Generics_SOP.Sized.R020
      Experiment.Generics_SOP.Sized.R030
      Experiment.Generics_SOP.Sized.R040
      Experiment.Generics_SOP.Sized.R050
      Experiment.Generics_SOP.Sized.R060
      Experiment.Generics_SOP.Sized.R070
      Experiment.Generics_SOP.Sized.R080
      Experiment.Generics_SOP.Sized.R090
      Experiment.Generics_SOP.Sized.R100

      Experiment.Generics_LR
      Experiment.Generics_LR.Sized.R000
      Experiment.Generics_LR.Sized.R010
      Experiment.Generics_LR.Sized.R020
      Experiment.Generics_LR.Sized.R030
      Experiment.Generics_LR.Sized.R040
      Experiment.Generics_LR.Sized.R050
      Experiment.Generics_LR.Sized.R060
      Experiment.Generics_LR.Sized.R070
      Experiment.Generics_LR.Sized.R080
      Experiment.Generics_LR.Sized.R090
      Experiment.Generics_LR.Sized.R100

      Experiment.PreEval_Nominal.Sized.R000
      Experiment.PreEval_Nominal.Sized.R010
      Experiment.PreEval_Nominal.Sized.R020
      Experiment.PreEval_Nominal.Sized.R030
      Experiment.PreEval_Nominal.Sized.R040
      Experiment.PreEval_Nominal.Sized.R050
      Experiment.PreEval_Nominal.Sized.R060
      Experiment.PreEval_Nominal.Sized.R070
      Experiment.PreEval_Nominal.Sized.R080
      Experiment.PreEval_Nominal.Sized.R090
      Experiment.PreEval_Nominal.Sized.R100

      Experiment.PreEval_Phantom.Sized.R000
      Experiment.PreEval_Phantom.Sized.R010
      Experiment.PreEval_Phantom.Sized.R020
      Experiment.PreEval_Phantom.Sized.R030
      Experiment.PreEval_Phantom.Sized.R040
      Experiment.PreEval_Phantom.Sized.R050
      Experiment.PreEval_Phantom.Sized.R060
      Experiment.PreEval_Phantom.Sized.R070
      Experiment.PreEval_Phantom.Sized.R080
      Experiment.PreEval_Phantom.Sized.R090
      Experiment.PreEval_Phantom.Sized.R100

executable bench-typelet
  import:
      defaults
    , benchmark
  main-is:
      Main.hs
  hs-source-dirs:
      bench/typelet
  default-extensions:
      DataKinds
      ScopedTypeVariables
      TypeApplications
  build-depends:
      typelet
  other-modules:
      Common.HListOfSize.HL010
      Common.HListOfSize.HL020
      Common.HListOfSize.HL030
      Common.HListOfSize.HL040
      Common.HListOfSize.HL050
      Common.HListOfSize.HL060
      Common.HListOfSize.HL070
      Common.HListOfSize.HL080
      Common.HListOfSize.HL090
      Common.HListOfSize.HL100

      Common.FunOfArity.F010
      Common.FunOfArity.F020
      Common.FunOfArity.F030
      Common.FunOfArity.F040
      Common.FunOfArity.F050
      Common.FunOfArity.F060
      Common.FunOfArity.F070
      Common.FunOfArity.F080
      Common.FunOfArity.F090
      Common.FunOfArity.F100

      Experiment.HListBaseline.Sized.R000
      Experiment.HListBaseline.Sized.R010
      Experiment.HListBaseline.Sized.R020
      Experiment.HListBaseline.Sized.R030
      Experiment.HListBaseline.Sized.R040
      Experiment.HListBaseline.Sized.R050
      Experiment.HListBaseline.Sized.R060
      Experiment.HListBaseline.Sized.R070
      Experiment.HListBaseline.Sized.R080
      Experiment.HListBaseline.Sized.R090
      Experiment.HListBaseline.Sized.R100

      Experiment.HListLetAsCase.Sized.R000
      Experiment.HListLetAsCase.Sized.R010
      Experiment.HListLetAsCase.Sized.R020
      Experiment.HListLetAsCase.Sized.R030
      Experiment.HListLetAsCase.Sized.R040
      Experiment.HListLetAsCase.Sized.R050
      Experiment.HListLetAsCase.Sized.R060
      Experiment.HListLetAsCase.Sized.R070
      Experiment.HListLetAsCase.Sized.R080
      Experiment.HListLetAsCase.Sized.R090
      Experiment.HListLetAsCase.Sized.R100

      Experiment.HListLetAsCPS.Sized.R000
      Experiment.HListLetAsCPS.Sized.R010
      Experiment.HListLetAsCPS.Sized.R020
      Experiment.HListLetAsCPS.Sized.R030
      Experiment.HListLetAsCPS.Sized.R040
      Experiment.HListLetAsCPS.Sized.R050
      Experiment.HListLetAsCPS.Sized.R060
      Experiment.HListLetAsCPS.Sized.R070
      Experiment.HListLetAsCPS.Sized.R080
      Experiment.HListLetAsCPS.Sized.R090
      Experiment.HListLetAsCPS.Sized.R100

      Experiment.ApBaseline.Sized.R000
      Experiment.ApBaseline.Sized.R010
      Experiment.ApBaseline.Sized.R020
      Experiment.ApBaseline.Sized.R030
      Experiment.ApBaseline.Sized.R040
      Experiment.ApBaseline.Sized.R050
      Experiment.ApBaseline.Sized.R060
      Experiment.ApBaseline.Sized.R070
      Experiment.ApBaseline.Sized.R080
      Experiment.ApBaseline.Sized.R090
      Experiment.ApBaseline.Sized.R100

      Experiment.ApLet.Sized.R000
      Experiment.ApLet.Sized.R010
      Experiment.ApLet.Sized.R020
      Experiment.ApLet.Sized.R030
      Experiment.ApLet.Sized.R040
      Experiment.ApLet.Sized.R050
      Experiment.ApLet.Sized.R060
      Experiment.ApLet.Sized.R070
      Experiment.ApLet.Sized.R080
      Experiment.ApLet.Sized.R090
      Experiment.ApLet.Sized.R100

executable bench-large-anon
  import:
      defaults
    , benchmark
  main-is:
      Main.hs
  hs-source-dirs:
      bench/large-anon
  ghc-options:
      -Wno-unticked-promoted-constructors
  build-depends:
      large-anon
    , typelet

    -- TODO: These dependencies should not be here
    -- (This is the module finding problem in large-anon)
    , sop-core
    , large-generics
    , record-hasfield
  other-modules:
      Common.RowOfSize.Row010
      Common.RowOfSize.Row020
      Common.RowOfSize.Row030
      Common.RowOfSize.Row040
      Common.RowOfSize.Row050
      Common.RowOfSize.Row060
      Common.RowOfSize.Row070
      Common.RowOfSize.Row080
      Common.RowOfSize.Row090
      Common.RowOfSize.Row100

      Experiment.ConstructNoTypeLet.Sized.R000
      Experiment.ConstructNoTypeLet.Sized.R010
      Experiment.ConstructNoTypeLet.Sized.R020
      Experiment.ConstructNoTypeLet.Sized.R030
      Experiment.ConstructNoTypeLet.Sized.R040
      Experiment.ConstructNoTypeLet.Sized.R050
      Experiment.ConstructNoTypeLet.Sized.R060
      Experiment.ConstructNoTypeLet.Sized.R070
      Experiment.ConstructNoTypeLet.Sized.R080
      Experiment.ConstructNoTypeLet.Sized.R090
      Experiment.ConstructNoTypeLet.Sized.R100

      Experiment.ConstructWithTypeLet.Sized.R000
      Experiment.ConstructWithTypeLet.Sized.R010
      Experiment.ConstructWithTypeLet.Sized.R020
      Experiment.ConstructWithTypeLet.Sized.R030
      Experiment.ConstructWithTypeLet.Sized.R040
      Experiment.ConstructWithTypeLet.Sized.R050
      Experiment.ConstructWithTypeLet.Sized.R060
      Experiment.ConstructWithTypeLet.Sized.R070
      Experiment.ConstructWithTypeLet.Sized.R080
      Experiment.ConstructWithTypeLet.Sized.R090
      Experiment.ConstructWithTypeLet.Sized.R100

executable bench-superrecord
  import:
      defaults
    , benchmark
  main-is:
      Main.hs
  hs-source-dirs:
      bench/superrecord
  build-depends:
      superrecord

      -- superrecord does not like aeson >= 2
    , aeson < 2
  other-modules:
      Common.RowOfSize.Row010
      Common.RowOfSize.Row020
      Common.RowOfSize.Row030
      Common.RowOfSize.Row040
      Common.RowOfSize.Row050
      Common.RowOfSize.Row060
      Common.RowOfSize.Row070
      Common.RowOfSize.Row080
      Common.RowOfSize.Row090
      Common.RowOfSize.Row100

      -- these are expensive:
      --
      -- #size #time
      --   010       6s
      --   020       9s
      --   030      16s
      --   040      32s
      --   050   1m  2s
      --   060   1m 56s
      --
      -- Didn't (yet) try these:
      --
      --   070 ~ 4min?
      --   080 ~ 8min?
      --   090 ~ 16min?
      --   100 ~ 32min?
      Experiments.SR_Construct.Sized.R000
      Experiments.SR_Construct.Sized.R010
      Experiments.SR_Construct.Sized.R020
      Experiments.SR_Construct.Sized.R030
--      Experiments.SR_Construct.Sized.R040
--      Experiments.SR_Construct.Sized.R050
--      Experiments.SR_Construct.Sized.R060
--      Experiments.SR_Construct.Sized.R070
--      Experiments.SR_Construct.Sized.R080
--      Experiments.SR_Construct.Sized.R090
--      Experiments.SR_Construct.Sized.R100

--
-- TEST SUITE
--
-- This contains some sanity checks for the various benchmarks. Instead of
-- making each of those benchmarks their own library just for the sake of these
-- simple tests, we instead use directory sharing.
--

test-suite test-large-records-benchmarks
  import:
      defaults
  type:
      exitcode-stdio-1.0
  main-is:
      TestLargeRecordsBenchmarks.hs
  default-extensions:
      CPP
  hs-source-dirs:
      test
      bench/after
      bench/before
      bench/experiments
  build-depends:
      aeson
    , generics-sop
    , json-sop
    , large-generics
    , large-records
    , large-records-benchmarks
    , record-hasfield
    , sop-core
    , tasty
    , tasty-hunit

    -- This is necessary for the 'Before' modules
    , record-dot-preprocessor
  other-modules:
      Test.After
      Test.HigherKinded
      Test.Experiment.Generics

      Before.Sized.R010
      Before.Sized.R020
      Before.Sized.R030
      Before.Sized.R040
      Before.Sized.R050
      Before.Sized.R060
      Before.Sized.R070
      Before.Sized.R080
      Before.Sized.R090
      Before.Sized.R100

      After.Sized.R010
      After.Sized.R020
      After.Sized.R030
      After.Sized.R040
      After.Sized.R050
      After.Sized.R060
      After.Sized.R070
      After.Sized.R080
      After.Sized.R090
      After.Sized.R100

      HigherKinded.Sized.R010
      HigherKinded.Sized.R020
      HigherKinded.Sized.R030
      HigherKinded.Sized.R040
      HigherKinded.Sized.R050
      HigherKinded.Sized.R060
      HigherKinded.Sized.R070
      HigherKinded.Sized.R080
      HigherKinded.Sized.R090
      HigherKinded.Sized.R100

      Experiment.Generics_LR
      Experiment.Generics_SOP

      Infra.ShowType
      Infra.Tree

--
-- FLAGS
--

Flag profile-coresize
  Description: Enable ghc flags for core size profiling
  Default: False
  Manual: True

Flag profile-timing
  Description: Enable ghc flags for compilation time profiling
  Default: False
  Manual: True
