cabal-version:      2.4
build-type:         Simple
name:               typelet-doctests
version:            0
synopsis:           Typelet doctests
description:        Typelet doctests.
bug-reports:        https://github.com/well-typed/typelet/issues
license:            BSD-3-Clause
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
copyright:          Well-Typed LLP, Juspay Technologies Pvt Ltd
category:           Plugin
tested-with:        GHC ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.2

library
    exposed-modules:
        DoctestExamplesTypeLet
    hs-source-dirs:
        src
    default-language:
        Haskell2010
    ghc-options:
        -Wall
    build-depends:
        base <5
      , typelet

